--- a/style.css
+++ b/style.css
@@ -10,24 +10,31 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-.container-nav {
-    max-width: 100%;
+.navigation {
     background-color: var(--secondary-color);
-    height: 5vh;
-    font-size: x-large;
-    padding: 2rem;
+    color: var(--primary-color);
+    padding: 1rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
 
-.nav-link {
-    color: var(--primary-color);
-    box-sizing: border-box;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-    margin-right: 0.5rem;
+.navigation .nav-brand {
+    font-weight: bold;
+    font-size: 2rem;
+    font-family: "Megrim", cursive;
+    text-align: initial;
+}
+
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .link {
+    color: var(--secondary-color);
+}
+
+.navigation .link-active {
+    font-weight: bold;
 }
 
 .container {
@@ -43,6 +50,15 @@ body {
     text-align: center;
     font-weight: 600;
     margin: 1rem 0;
+}
+
+.non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
 }
 
 .input-angle {
